# controlgate-security-baseline-catalog

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main-release.yml  schema-release.yml
baseline/: cgsbc_full_catalog_enriched.json
baseline/historical/: cgsbc_full_catalog_enriched_2026-02-23T07-10-55Z.json  cgsbc_full_catalog_enriched_2026-02-24T06-28-00Z.json  cgsbc_full_catalog_enriched_2026-02-24T07-06-00Z.json  cgsbc_full_catalog_enriched_2026-02-25T07-07-20Z.json  cgsbc_full_catalog_enriched_2026-02-26T07-06-03Z.json  cgsbc_full_catalog_enriched_2026-02-27T07-00-41Z.json  cgsbc_full_catalog_enriched_2026-02-28T06-45-37Z.json  cgsbc_full_catalog_enriched_2026-03-01T06-53-42Z.json  cgsbc_full_catalog_enriched_2026-03-02T07-04-48Z.json  cgsbc_full_catalog_enriched_2026-03-03T06-58-48Z.json  cgsbc_full_catalog_enriched_2026-03-04T06-55-28Z.json  cgsbc_full_catalog_enriched_2026-03-05T06-59-02Z.json  cgsbc_full_catalog_enriched_2026-03-06T06-56-57Z.json  cgsbc_full_catalog_enriched_2026-03-07T06-49-21Z.json  cgsbc_full_catalog_enriched_2026-03-08T06-49-02Z.json  cgsbc_full_catalog_enriched_2026-03-08T19-51-35Z.json  cgsbc_full_catalog_enriched_2026-03-08T21-08-36Z.json  cgsbc_full_catalog_enriched_2026-03-08T21-30-34Z.json  cgsbc_full_catalog_enriched_2026-03-08T21-32-21Z.json  cgsbc_full_catalog_enriched_2026-03-09T00-18-40Z.json
spec/schemas/: cgsbc-v0.1.json  cgsbc-v0.1.yaml
src/cgsbc/: __init__.py  cli.py  fetch.py  generate.py  urls.py
tests/: test_cli.py  test_fetch.py  test_generate.py  test_oscal_id.py  test_schema_validation.py
